# signalis

./: .env.example  README.md  install.bat  install.sh  pyproject.toml
connector/: cli.py  config.py  enrichment.py  interactive.py  intro_generator.py  matcher.py  semantic_expansion.py  senders.py
shaper/: banner.py  cli.py
